results/SVCOMP/specgen/log-StringCompare04-2024_03_01_17_07_42.txt
public class StringCompare04 {
    //@ requires arg1 != null && arg2 != null;
    //@ ensures \result <==> s2.compareTo(s1) == 13;
    public static boolean f(String arg1, String arg2) {
        String s1 = new String(arg1);
        String s2 = arg2;
        return s2.compareTo(s1) == 13; // false
    }
}
/home/max/Documents/JMLGPT/tmp/StringCompare04.java:3: error: cannot find symbol
    //@ ensures \result <==> s2.compareTo(s1) == 13;
                                          ^
  symbol:   variable s1
  location: class StringCompare04
/home/max/Documents/JMLGPT/tmp/StringCompare04.java:3: error: cannot find symbol
    //@ ensures \result <==> s2.compareTo(s1) == 13;
                             ^
  symbol:   variable s2
  location: class StringCompare04
2 errors

public class StringCompare04 {
    //@ requires arg1 != null && arg2 != null;
    //@ ensures \result <==> arg2.compareTo(new String(arg1)) == 13;
    public static boolean f(String arg1, String arg2) {
        String s1 = new String(arg1);
        String s2 = arg2;
        return s2.compareTo(s1) == 13; // false
    }
}
/home/max/Documents/JMLGPT/tmp/StringCompare04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> arg2.compareTo(new String(arg1)) == 13;
                                            ^
1 error

public class StringCompare04 {
    //@ requires arg1 != null && arg2 != null;
    //@ ensures \result <==> arg2.compareTo(arg1) == 13;
    public static boolean f(String arg1, String arg2) {
        String s1 = new String(arg1);
        String s2 = arg2;
        return s2.compareTo(s1) == 13; // false
    }
}
